<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryContainer"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/splash_logo_description"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/splash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/splash_app_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/splash_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.88"
            android:gravity="center"
            android:text="@string/splash_tagline"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?attr/colorOnPrimaryContainer" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
